<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_policy_3"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="20sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/cardview_default_radius"
        android:layout_height="200dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_policy"
            android:textSize="14sp"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/user_policy_1"
            android:id="@+id/agreeButton_user_policy"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_policy_2"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:id="@+id/disagreeButton_user_policy"
            android:padding="5dp"/>
    </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>