<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:layout="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        app:title="设置"
        android:id="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/personalSetting_aboutMe"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:id="@+id/about_me_userPhotoBtn"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_me_personal_info_6"
                            android:layout_marginStart="5dp"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:id="@+id/about_me_userBackGroundBtn"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_me_personal_info_7"
                            android:layout_marginStart="5dp"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:id="@+id/about_me_usernameBtn"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_me_personal_info_1"
                            android:layout_marginStart="5dp"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about_me_username"
                            android:layout_marginEnd="30dp"
                            android:layout_marginStart="80dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true" />
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_me_idBtn"
                        android:padding="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/about_me_personal_info_2"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about_me_id"
                            android:layout_marginEnd="30dp"
                            android:layout_marginStart="80dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:id="@+id/about_me_genderBtn"
                        android:layout_height="wrap_content"
                        android:padding="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/about_me_personal_info_3"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about_me_gender"
                            android:layout_marginStart="80dp"
                            android:layout_marginEnd="30dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_me_birthdayBtn"
                        android:padding="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/about_me_personal_info_4"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about_me_birthday"
                            android:layout_marginStart="80dp"
                            android:layout_marginEnd="30dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_me_signatureBtn"
                        android:padding="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/about_me_personal_info_5"
                            android:layout_alignParentStart="true"
                            android:fontFamily="sans-serif-condensed"
                            android:textSize="22sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about_me_signature"
                            android:layout_marginStart="80dp"
                            android:layout_marginEnd="30dp"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/icon_right_arrow" />
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

</androidx.drawerlayout.widget.DrawerLayout>